--- a/html.html
+++ b/html.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <header>
+    <head>
         <title>My Second HTML</title>
-    </header>
+    </head>
     <body>
         <h1>My Second Web Page</h1>
     </body>
